# voice-agent

./: .env.example  .gitignore  CHANGELOG.md  README.md  docker-compose.yml  flake.nix  justfile  mkdocs.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: index.md
docs/api/: bot.md  config.md  router.md  sessions.md  transcribe.md
docs/architecture/: overview.md  permission-model.md  sdk-integration.md  session-lifecycle.md
docs/development/: contributing.md  testing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: deployment.md  multi-session.md  troubleshooting.md  voice-commands.md
nix/: docker-image.nix
nixos/: module.nix  test.nix
src/voice_agent/: __init__.py  __main__.py  bot.py  config.py  router.py  telegram_format.py  transcribe.py
src/voice_agent/sessions/: __init__.py  image.py  manager.py  permissions.py  storage.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_voice_flow.py
tests/integration/: __init__.py  test_bot_handlers.py  test_session_manager.py  test_whisper_client.py
tests/unit/: __init__.py  test_config.py  test_permissions.py  test_router.py  test_storage.py  test_telegram_format.py  test_transcribe.py
